CompanyUsers working, figuring generating hooks
